<resources>
    <string name="app_name">ProMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="string_blog">Blog</string>
    <string name="string_about">O nás</string>
    <string name="string_contact">Kontaktujte nás</string>
    <string name="string_facebook">Facebook</string>
    <string name="string_instagram">Instagram</string>
    <string name="string_google">Google +</string>
    <string name="string_cooperation">Spolupráca</string>
    <string name="string_personal_info">Ochrana osobných údajov</string>
    <string name="title_activity_maps">Mapa</string>
</resources>
