<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_blog"
            android:title="@string/string_blog" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/string_about" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/string_contact" />
        <item
            android:id="@+id/nav_facebook"
            android:title="@string/string_facebook" />
        <item
            android:id="@+id/nav_instagram"
            android:title="@string/string_instagram" />
        <item
            android:id="@+id/nav_googleplus"
            android:title="@string/string_google" />
        <item
            android:id="@+id/nav_cooperation"
            android:title="@string/string_cooperation" />
        <item
            android:id="@+id/nav_personal_info"
            android:title="@string/string_personal_info" />
    </group>

</menu>
